--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,70 @@
 
+@misc{usgs_national_2021,
+	title = {National {Water} {Information} {System}},
+	url = {https://waterdata.usgs.gov/nwis},
+	urldate = {2021-06-15},
+	journal = {USGS Water Data for the Nation},
+	author = {{USGS}},
+	year = {2021},
+}
+
+@article{noauthor_chemical_1977,
+	title = {Chemical geothermometers and mixing models for geothermal systems},
+	volume = {5},
+	issn = {0375-6505},
+	url = {https://www-sciencedirect-com.libproxy.mit.edu/science/article/pii/0375650577900074},
+	doi = {10.1016/0375-6505(77)90007-4},
+	abstract = {Qualitative chemical geothermometers utilize anomalous concentrations of various “indicator” elements in groundwaters, streams, soils, and soil gases …},
+	language = {en},
+	number = {1-4},
+	urldate = {2021-06-15},
+	journal = {Geothermics},
+	month = jan,
+	year = {1977},
+	note = {Publisher: Pergamon},
+	pages = {41--50},
+}
+
+@article{fournier_chemical_1977,
+	title = {Chemical geothermometers and mixing models for geothermal systems},
+	volume = {5},
+	issn = {0375-6505},
+	number = {1-4},
+	journal = {Geothermics},
+	author = {Fournier, RO},
+	year = {1977},
+	note = {Publisher: Elsevier},
+	pages = {41--50},
+}
+
+@techreport{bankey_digital_2002,
+	address = {Washington, D.C.},
+	type = {Open-{File} {Report}},
+	title = {Digital data grids for the magnetic anomaly map of {North} {America}},
+	url = {https://pubs.usgs.gov/of/2002/ofr-02-414/},
+	number = {2331-1258},
+	institution = {USGS},
+	author = {Bankey, Viki and Cuevas, Alejandro and Daniels, David and Finn, Carol A and Hernandez, Israel and Hill, Patricia and Kucks, Robert and Miles, Warner and Pilkington, Mark and Roberts, Carter},
+	year = {2002},
+}
+
+@article{maus_first_2002,
+	title = {First scalar magnetic anomaly map from {CHAMP} satellite data indicates weak lithospheric field: {CHAMP} {SCALAR} {MAGNETIC} {ANOMALY} {MAP}},
+	volume = {29},
+	issn = {00948276},
+	shorttitle = {First scalar magnetic anomaly map from {CHAMP} satellite data indicates weak lithospheric field},
+	url = {http://doi.wiley.com/10.1029/2001GL013685},
+	doi = {10.1029/2001GL013685},
+	language = {en},
+	number = {14},
+	urldate = {2021-06-15},
+	journal = {Geophysical Research Letters},
+	author = {Maus, S. and Rother, M. and Holme, R. and Lühr, H. and Olsen, N. and Haak, V.},
+	month = jul,
+	year = {2002},
+	pages = {45--1--47--4},
+}
+
 @article{pursley_earthquake_2013,
 	title = {Earthquake catalogs for {New} {Mexico} and bordering areas: 2005–2009},
 	volume = {35},
@@ -2060,7 +2126,7 @@ Publication Title: US EIA - Short-Term Energy Outlook},
 	urldate = {2021-04-14},
 }
 
-@techreport{schochet_development_2001-1,
+@techreport{schochet_development_2001,
 	title = {Development of a {Plan} to {Implement} {Enhanced} {Geothermal} {Systems} ({EGS}) in the {Animas} {Valley}, {New} {Mexico} - {Final} {Report} - 07/26/2000 - 02/01/2001; {FINAL}},
 	url = {http://inis.iaea.org/Search/search.aspx?orig_q=RN:33052100},
 	language = {English},
